# tomato

./: .gitignore  Main.hs  Paths_tomato.hs  README.md  tomato.cabal
Tomato/: Core.hs  Types.hs  Ui.hs
Tomato/Core/: Types.hs
Tomato/Ui/: Types.hs
data/: tomato.ui
tomato-core/: tomato-core.cabal
tomato-core/src/: .Tomato.hs.swp  Tomato.hs
tomato-gui/src/: Main.hs  tomato.ui
