name:                tomato
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
-- author:              
maintainer:          http://github.com/jxv/tomato
-- copyright:           
category:            Productivity
build-type:          Simple
extra-source-files:
  README.md,
  data/tomato.ui,
  data/tick_tock.ogg,
  data/ring.ogg
data-files:
  data/tomato.ui,
  data/tick_tock.ogg,
  data/ring.ogg

cabal-version:       >=1.10

executable tomato
  main-is:             Main.hs
  other-modules:       Paths_tomato
  -- other-extensions:    TemplateHaskell, NamedFieldPuns, RecordWildCards, MultiWayIf
  build-depends:       base >=4.6 && <4.7,
                       mtl >=2.1 && <2.2,
                       time >=1.4 && <1.5,
                       lens >=4.2 && <4.3,
                       sodium >=0.10 && <0.11,
                       gtk3 >=0.12 && <0.13,
                       SDL >=0.6 && <0.7,
                       SDL-mixer >=0.6 && <0.7
  -- hs-source-dirs:      
  default-language:    Haskell2010
